# HPC4WC

./: .gitignore  .gitmodules  .profile  README.md  TODO.txt  overlay_and_speedup.py  prepare_cuda.sh  prepare_gt.sh  stencil2d_jax_new.py  stencil2d_new.py  stencil2d_numba_new.py  stencil2d_torch_new.py  stencil_bench.py
projects/2021/groupA_blocking_strategies/: .clang-format-ignore  .gitignore  CMakeLists.txt  README.md
projects/2021/groupA_blocking_strategies/docs/: Doxyfile.in
projects/2021/groupA_blocking_strategies/ext/: CMakeLists.txt
projects/2021/groupA_blocking_strategies/scripts/: cmake.sh  createAnimation.py  create_env.sh  plotHeatMap.py  showmat.py
projects/2021/groupA_blocking_strategies/src/: CMakeLists.txt
projects/2021/groupA_blocking_strategies/tests/: CMakeLists.txt  Test_Argsparser.cpp  Test_BoundaryConditions.cpp  Test_Diffusion.cpp  Test_Field.cpp  Test_IO.cpp  Test_InitialConditions.cpp
projects/2021/groupK_burgers_openmp/branch-omp/: CMakeLists.txt  bench.sh  main.cpp  plot  results-collapsed-dynamic.txt  results-collapsed-static.txt  results-shallow-dynamic.txt  results-shallow-static.txt  results-single.txt
projects/2022/group4_unstructured/: CMakeLists.txt  plot_mesh.py  plot_neighbours_distance.py  walltime.hpp
projects/2023/project08_highlevel_languages/RustCode/: Cargo.toml  bench_get_estimates.sh
projects/2023/project09_cache_hierarchy/: CMakeLists.txt  README.md
projects/2023/project09_cache_hierarchy/scripts/: plot_hitrate.py  plot_hitrate_asymmetric_blocking.py  plot_hitrate_temporal_blocking.py  plot_runtime.py  plot_runtime_hitrate.py
projects/2023/project09_cache_hierarchy/src/: CMakeLists.txt  cache_hierarchy.cpp  cache_simulator.cpp  cache_simulator.hpp  stencils.hpp  utils.hpp
projects/2023/project09_cache_hierarchy/test/: CMakeLists.txt
projects/2023/project12_highlevel_programming/: .gitignore  0_initialize_fields.ipynb  0_intro.ipynb  1_lists_numpy.ipynb  2_numba.ipynb  3_gt4py.ipynb  4_numexpr.ipynb  5_taichi.ipynb  6_summary.ipynb  Makefile  README.md  common.py  lists_numpy_numba.ipynb  pyproject.toml  report.tex  requirements.txt  results.csv  setup.sh  stencil2d.py  stencil2d_gt4py.py
projects/2023/project12_highlevel_programming/plots/: 1d_same_column_stencil.eps  1d_stencil.eps  2d_stencil.eps  pointwise_copy_stencil.eps  pointwise_sine_stencil.eps  time_vs_dim_size.eps
projects/2025/project03-overlap-transf-comp/: .gitignore  CMakeLists.txt  README.md  nsys-arccos.sh  nsys-stencil.sh  requirements.txt  run-arccos_cuda.sh  run-arccos_gt4py_DEBUG.sh  run-arccos_gt4py_cpu.sh  run-arccos_gt4py_gpu.sh  run-arccos_gt4py_gpu_notransfer.sh  run-stencil_gt4py_DEBUG.sh  run-stencil_gt4py_cpu.sh  run-stencil_gt4py_gpu.sh  run-stencil_gt4py_gpu_notransfer.sh  run-stencil_scaling.sh
projects/2025/project03-overlap-transf-comp/measurements/: arccos_cuda_vs_gt4py_plots.ipynb  cuda_plots.ipynb  perf_test_cuda_20250707_123409.out  perf_test_cuda_256955.csv  perf_test_cuda_256955.err  perf_test_cuda_256955.out  perf_test_cuda_257136.csv  perf_test_cuda_257136.err  perf_test_cuda_257136.out  perf_test_cuda_258337.err  perf_test_cuda_258337.out  perf_test_cuda_258360.err  perf_test_cuda_258360.out  perf_test_cuda_258389.csv  perf_test_cuda_258389.err  perf_test_cuda_258389.out  perf_test_cuda_258768.csv  perf_test_cuda_258768.err  perf_test_cuda_258768.out  perf_test_cuda_269302.csv  perf_test_cuda_269302.out  stencil_cuda_vs_gt4py_plots.ipynb  stencil_gpu_scaling_264410.out  stencil_gpu_scaling_265180.csv  stencil_gpu_scaling_265180.out  stencil_gpu_scaling_265417.out  stencil_gpu_scaling_265510.csv  stencil_gpu_scaling_265510.out  stencil_gt4py_DEBUG_308507.csv  stencil_gt4py_gpu_306785.csv  stencil_gt4py_gpu_notransfer_308524.csv  timeit_gt4py_DEBUG_271665.csv  timeit_gt4py_cpu_272044.csv  timeit_gt4py_cpu_272261.csv  timeit_gt4py_gpu_272012.csv  timeit_gt4py_gpu_273716.csv  timeit_gt4py_gpu_notransfer_307809.csv
projects/2025/project03-overlap-transf-comp/tests/: comparison.py  test_arccos_gt4py.sh  test_arccos_gt4py_313186.out  test_stencil.sh
projects2020/group03/: .gitignore  CMakeLists.txt  Readme.md
projects2020/group03/cmake/: CUDA_FLAGS.cmake  CXX_FLAGS.cmake  Flags.cmake  Fortran_FLAGS.cmake  flags.cmake
projects2020/group03/cpp/: stencil2d-arrayFusion.cpp  stencil2d-base-array.cpp  stencil2d-base.cpp
projects2020/group03/report/src/: introduction.tex  method.tex  results.tex
projects2020/group03/scripts/: build.sh  compilers.sh  daint.sh  data1.sh  data2.sh  data3.sh  data3.txt  data4.sh  data4.txt  data_wrapper.sh  error.sh  greasy.txt  run.sh  submit.sh  table.sh  versions.sh
projects2020/group03/src/: CMakeLists.txt  diffusion_openacc.f  diffusion_openmp.f  diffusion_openmp_target.f  halo_mpi.f  halo_seq.f  m_partitioner.f  m_utils.f  partitioner.cmake  stencil2d-mpi.cmake  stencil2d-orig.cmake  stencil2d-orig.f  stencil2d.f  stencil2d_openacc.cmake  stencil2d_openmp.cmake  stencil2d_openmp_target.cmake  stencil2d_seq.cmake  utils.h
projects2020/group03/src/cuda/: CMakeLists.txt  Readme.md  apply_diffusion.h  compile.sh  job.slurm  modules.sh  stencil2d-fusion.cpp  stencil2d.cpp  stencil2d.cu  stencil2d.slurm  stencil2d_cpu.cmake  stencil2d_cpu.slurm  stencil2d_gpu.cmake  stencil2d_gpu.slurm  stencil2d_hybrid.cmake  stencil2d_hybrid.slurm  update_halo.cpp  validate.py
projects2020/group03/src/halo/: CMakeLists.txt  halo_mpi.cmake  halo_mpi.f  halo_openmp.cmake  halo_openmp.f  halo_openmp_mpi.cmake  halo_openmp_mpi.f  halo_seq.f
projects2020/group03/src/mpi/: stencil2d-mpi.f
projects2020/group03/src/openacc/: .gitignore  CMakeLists.txt  diffusion_openacc.f  stencil2d-arrayFusion-acc.cmake  stencil2d-arrayFusion-acc.cpp  stencil2d-base-array-acc.cmake  stencil2d-base-array-acc.cpp  stencil2d_openacc.cmake
projects2020/group03/src/openacc_split/: CMakeLists.txt  diffusion_openacc_split.f  stencil2d-arrayFusion-accsplit.cmake  stencil2d-arrayFusion-accsplit.cpp  stencil2d_omp.cpp  stencil2d_openacc_split.cmake
projects2020/group03/src/openmp/: CMakeLists.txt  diffusion_openmp.f  (+2 more)
(+1587 files in other folders)
