[project]
name = "Project 12 Highlevel Programming"
version = "1.0"
description = "Benchmarking a few different stencils using a selection of high-level programming techniques available in Python"
authors = [
    {name = "Iyán Méndez Veiga", email = "iyan.mendezveiga@hslu.ch"},
    {name = "Jingzhi Zhang", email = "zhangjing@student.ethz.ch"},
]
dependencies = [
    "numpy>=1.24.4",
    "numba>=0.57.1",
    "numexpr>=2.8.5",
    "taichi>=1.6.0",
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = {text = "MIT"}

