[project]
name = "project-12-highlevel-programming"
version = "1.0"
description = "Benchmarking a few different stencils using a selection of high-level programming techniques available in Python"
authors = [
    {name = "Iyán Méndez Veiga", email = "iyan.mendezveiga@hslu.ch"},
    {name = "Jingzhi Zhang", email = "zhangjing@student.ethz.ch"},
]
dependencies = [
    "numpy>=1.23",
    "numba>=0.57.1",
    "numexpr>=2.8.5",
    "taichi>=1.6.0",
    "matplotlib>=3.7.2",
    "ipython>=8.14.0",
    "ipykernel>=6.25.1",
    "nbdime>=3.2.1",
    "gt4py @ git+https://github.com/gridtools/gt4py.git@v1.0.1",
    "pandas>=2.0.3",
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools.packages]
find = {}