[package]
name = "RustCode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "RustCode"
path = "src/main.rs"
bench = false

[lib]
name = "RustCode"
path = "src/lib.rs"
bench = false

#[profile.release]
#panic = "abort"
#lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
csv = "1.2.2"
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false